# to_do_list

./: .gitignore  .gitmodules  Dockerfile  README.md  alembic.ini  docker-compose.common.yml  docker-compose.develop.yml  docker-compose.production.yml  entrypoint.sh  main.py  poetry.toml  pyproject.toml
alembic/: env.py
alembic/versions/: 0a5d2a24fee3_include_seasonstorage_model.py  72397ba0d0ce_include_time_calc_column_to_imagehistory.py  a17f218ca53e_added_registered_collunm.py  cd451a977804_added_file_path_to_imagehistory.py  f6b17c5409c3_remove_dia_from_imagehistory.py
templates/: index.html
to_do_list/: crud.py  database.py  enums.py  exceptions.py  faked.py  settings.py
to_do_list/api/: v1.py
